[package]
name = "kafka_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.21.2", features = ["full"] }
ksqldb = "0.1.0-alpha.6"
futures-util = "0.3.25"
reqwest = "0.11.12"
serde = "1.0.147"
base64 = "0.13.1"
serde_json = "1.0.87"
